[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdam = "0.5.1"
rayon = "1.8"
regex-macro = "0.2.0"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
memoize = "0.4.1"

[target.x86_64-pc-windows-msvc] 
rustflags = ["-C", "link-arg =-fuse-ld = lld"]

[target.x86_64-pc-windows-gnu] 
rustflags = ["-C", "link-arg =-fuse-ld = lld"] 
# On Linux: # - Ubuntu, ` sudo apt-get install lld clang ` 
# - Arch, ` sudo pacman -S lld clang ` 

[target.x86_64-unknown-linux-gnu] 
rustflags = ["-C", "linker = clang", "-C", "link-arg =-fuse-ld = lld"]
